[package]
name = "typed-sf"
version = "2.0.0"
edition = "2021"
description = "Typed ready-to-use implementation of SmallF*ck language in Rust."
license = "MIT"
readme = "crates-io.README.md"
repository = "https://github.com/Zote-the-Mighty-4o2/typed-sf.rs"

[features]
default = ["require_docs"]

require_docs = []
no_std = []
